--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>alphapebble-spark-hub</title>
-    <meta name="description" content="AlphaPebble Spark Hub" />
-    <meta name="author" content="AlphaPebble" />
+    <title>AlphaPebble Consulting | Startup Experiments & Innovation</title>
+    <meta name="description" content="AlphaPebble Consulting helps startups validate ideas through rapid experiments. Our expert team specializes in AI/ML, data engineering, and full-stack development." />
+    <meta name="author" content="AlphaPebble Consulting" />
 
-    <meta property="og:title" content="alphapebble-spark-hub" />
-    <meta property="og:description" content="AlphaPebble Spark Hub" />
+    <meta property="og:title" content="AlphaPebble Consulting | Startup Experiments & Innovation" />
+    <meta property="og:description" content="AlphaPebble Consulting helps startups validate ideas through rapid experiments. Our expert team specializes in AI/ML, data engineering, and full-stack development." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/images/og-image.png" />
 
