--- a/app.html
+++ b/app.html
@@ -15,11 +15,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@alphapebble" />
     <meta name="twitter:image" content="./images/og-image.png" />
+
+    <!-- Preload JavaScript with correct MIME type -->
+    <link rel="preload" href="./assets/index.js" as="script" type="application/javascript" />
+    <link rel="stylesheet" href="./assets/index.css" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- Entry point for the application -->
+    <!-- Entry point for the application with correct MIME type -->
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
