Update cloud kitchen portfolio card with more detailed experiment results

--- a/index.html
+++ b/index.html
@@ -663,11 +663,11 @@
       <div class="portfolio-grid">
         <div class="portfolio-card">
           <div class="portfolio-emoji">🍽️</div>
-          <h3>AI-Powered Restaurant Recommender</h3>
+          <h3>Cloud Kitchen Success Predictor</h3>
           <ul class="portfolio-details">
-            <li><span>🛠️ Built in:</span> 3 days</li>
-            <li><span>📈 Validated with:</span> 128 test users</li>
-            <li><span>💡 Result:</span> Pivoted to meal planning product</li>
+            <li><span>🛠️ Prototype built in:</span> 3 days</li>
+            <li><span>📈 Tested with:</span> 128 users across 3 cuisine types</li>
+            <li><span>💡 Insight:</span> Demand skewed toward single-cuisine kitchens → Pivoted to personalized meal planning</li>
           </ul>
         </div>
         <div class="portfolio-card">
