Add FinOps and SecOps content: blog card and CTA note

--- a/index.html
+++ b/index.html
@@ -610,6 +610,12 @@
       background-color: #2563EB;
     }
 
+    .scale-note {
+      margin-top: 20px;
+      font-size: 0.95rem;
+      color: rgba(246, 246, 247, 0.7);
+      text-align: center;
+    }
     .blog-cta {
       margin-top: 40px;
       text-align: center;
@@ -925,6 +931,21 @@
             <a href="#" class="blog-link">Read the case study <span class="arrow">→</span></a>
           </div>
         </div>
+        <div class="blog-card">
+          <div class="blog-image">
+            <div class="blog-category">Scale-Stage</div>
+          </div>
+          <div class="blog-content">
+            <h3>🛡️ After the MVP: Slashing Cloud Costs & Securing Growth</h3>
+            <p>Once your product gains traction, we help startups streamline cloud spend and get audit-ready — without hiring full-time engineers.</p>
+            <div class="blog-meta">
+              <span>6 min read</span>
+              <span>•</span>
+              <span>April 10, 2025</span>
+            </div>
+            <a href="finops-secops.html" class="blog-link">Learn more <span class="arrow">→</span></a>
+          </div>
+        </div>
       </div>
       <div class="blog-cta">
         <a href="#" class="btn btn-outline">View All Articles</a>
@@ -942,6 +963,7 @@
         <a href="mailto:contact@alphapebble.com" class="btn">Book a 15-min call</a>
         <a href="#" class="btn btn-outline">Download Capabilities PDF</a>
       </div>
+        <p class="scale-note">Already scaling? We also help with FinOps, SecOps, and audit readiness — just ask.</p>
     </div>
   </section>
 
