Add blog index page and After the MVP blog post

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
   <header>
     <div class="container">
       <nav>
-        <a href="#" class="logo">
+        <a href="blog/index.html" class="logo">
           <img src="./images/logo.png" alt="AlphaPebble Logo" class="logo-img">
           <span>AlphaPebble</span>
         </a>
@@ -880,7 +880,7 @@
               <span>•</span>
               <span>April 28, 2025</span>
             </div>
-            <a href="#" class="blog-link">Read Article <span class="arrow">→</span></a>
+            <a href="blog/index.html" class="blog-link">Read Article <span class="arrow">→</span></a>
           </div>
         </div>
 
@@ -896,7 +896,7 @@
               <span>•</span>
               <span>April 15, 2025</span>
             </div>
-            <a href="#" class="blog-link">Read Article <span class="arrow">→</span></a>
+            <a href="blog/index.html" class="blog-link">Read Article <span class="arrow">→</span></a>
           </div>
         </div>
 
@@ -912,7 +912,7 @@
               <span>•</span>
               <span>March 30, 2025</span>
             </div>
-            <a href="#" class="blog-link">Read Article <span class="arrow">→</span></a>
+            <a href="blog/index.html" class="blog-link">Read Article <span class="arrow">→</span></a>
           </div>
         </div>
 
@@ -928,7 +928,7 @@
               <span>•</span>
               <span>May 2, 2025</span>
             </div>
-            <a href="#" class="blog-link">Read the case study <span class="arrow">→</span></a>
+            <a href="blog/index.html" class="blog-link">Read the case study <span class="arrow">→</span></a>
           </div>
         </div>
         <div class="blog-card">
@@ -948,7 +948,7 @@
         </div>
       </div>
       <div class="blog-cta">
-        <a href="#" class="btn btn-outline">View All Articles</a>
+        <a href="blog/index.html" class="btn btn-outline">View All Articles</a>
       </div>
     </div>
   </section>
@@ -961,7 +961,7 @@
       </div>
       <div class="cta-buttons">
         <a href="mailto:contact@alphapebble.com" class="btn">Book a 15-min call</a>
-        <a href="#" class="btn btn-outline">Download Capabilities PDF</a>
+        <a href="blog/index.html" class="btn btn-outline">Download Capabilities PDF</a>
       </div>
         <p class="scale-note">Already scaling? We also help with FinOps, SecOps, and audit readiness — just ask.</p>
     </div>
