Fix link for 'After the MVP' blog card in main index.html

--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
               <span>•</span>
               <span>April 10, 2025</span>
             </div>
-            <a href="blog/tech-due-diligence.html" class="blog-link">Learn more <span class="arrow">→</span></a>
+            <a href="blog/after-the-mvp.html" class="blog-link">Learn more <span class="arrow">→</span></a>
           </div>
         </div>
       </div>
