Add Tech Due Diligence blog card to main index.html

--- a/index.html
+++ b/index.html
@@ -946,6 +946,21 @@
             <a href="blog/after-the-mvp.html" class="blog-link">Learn more <span class="arrow">→</span></a>
           </div>
         </div>
+        <div class="blog-card">
+          <div class="blog-image">
+            <div class="blog-category">Due Diligence</div>
+          </div>
+          <div class="blog-content">
+            <h3>📊 Tech Due Diligence for Investors & Founders</h3>
+            <p>We help investors and acquirers audit codebases, infra, and scalability before committing to a deal. One-week teardown, scorecard, and review.</p>
+            <div class="blog-meta">
+              <span>5 min read</span>
+              <span>•</span>
+              <span>April 15, 2025</span>
+            </div>
+            <a href="blog/tech-due-diligence.html" class="blog-link">Learn more <span class="arrow">→</span></a>
+          </div>
+        </div>
       </div>
       <div class="blog-cta">
         <a href="blog/index.html" class="btn btn-outline">View All Articles</a>
