Added .editorconfig, .prettierignore, and .prettierrc for consistent code formatting. Updated various project files including README, HTML templates, configs, and multiple source files for improved structure, formatting, and maintainability.

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AlphaPebble Consulting | Startup Experiments & Innovation</title>
-    <meta name="description" content="AlphaPebble Consulting helps startups validate ideas through rapid experiments. Our expert team specializes in AI/ML, data engineering, and full-stack development." />
+    <meta
+      name="description"
+      content="AlphaPebble Consulting helps startups validate ideas through rapid experiments. Our expert team specializes in AI/ML, data engineering, and full-stack development." />
     <meta http-equiv="refresh" content="0;url=./app.html" />
   </head>
   <body>
