added more improvments in the code

--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,9 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body class="bg-dark text-light">
+    <div id="cursor-dot"></div>
+    <div id="cursor-outline"></div>
+    
     <header
       class="py-4 fixed top-0 left-0 right-0 z-50 transition-all duration-300"
     >
